--- a/deliverables/test.css
+++ b/deliverables/test.css
@@ -1,27 +1,71 @@
-/*temporary style sheet*/
+/*stub style sheet*/
+
+/*
+CSS  Assume that there is a global css file that defines the following classes for use.
+  facs-button-active
+  facs-button-disabled
+  facs-box
+  facs-item
+  facs-item-selected
+*/
+
+body {
+  background-color: rgb(230, 230, 230);
+  padding-top: 30px;
+}
+
+button {
+  width: 150px;
+  display: block; 
+  border-radius: 5px;
+  margin-bottom: 7px;
+}
+
+.container {
+  position: relative;
+  display: inline;
+  float: left;
+  margin-left: 35px;
+}
+
+.facs-box {
+  height: 350px;
+  width:  300px;
+
+  margin-bottom: 15px;
+  padding: 5px;
+
+  background-color:rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  box-shadow: 0px 0px 1px 2px #000099;
+}
+
 .facs-button-active {
-  display: inline-block;
+  background-color: #ff6666;
 }
 
 .facs-button-disabled {
   display: none;
 }
 
-.facs-box {
-  position: relative;
-  border: 1px solid black;
-  height: 200px;
-  width:  100px;
-  display: inline;
-}
-
 .facs-item {
-  border: 1px solid blue;
-  height: 10px;
-  width:  20px;
-  display: inline-block;
+  border: 1px solid black;
+  background-color: #EEE;
+  height: 30px;
+  width:  200px;
+  display: block;
+  margin-top: 7px;
+  padding: 0px, 0px, 0px, 10px;
+  align-content: left;
 }
 
 .facs-item-selected {
-  background-color: green;
+  /*margin-left: 15px;  consider this for UX to rollover transition this property*/
+  border: 3px solid #333;
+  background-color: rgba(0, 230, 115, 0.5);
+  box-shadow: 0 0 3px 3px #0066ff;
+  -webkit-box-shadow: 0 0 3px 1px #0066ff;
+  -moz-box-shadow: 0 0 3px 3px #0066ff;
+  -ms-box-shadow: 0 0 3px 3px #0066ff;
+  -o-box-shadow: 0 0 3px 3px #0066ff;
 }
