--- a/deliverables/test.css
+++ b/deliverables/test.css
@@ -88,8 +88,12 @@ button {
        -o-box-shadow: 0px 0px 1px 0px black;
 }
 
+.hide {
+    display: none;
+}
 #cntrBtnGroup {
     position: absolute;
     top: 10px;
     left: 10px;
+    display: none;
 }
