--- a/deliverables/test.phtml
+++ b/deliverables/test.phtml
@@ -13,9 +13,9 @@
 <body>
 <!-- stub controll functions -->
 	<div id="cntrBtnGroup">
-		<button id="selectCtrl">Select</button>
-		<button id="activeCtrl">Activate</button>
-		<button id="inactiveCtrl">Disable</button>
+		<button id="toggleStubs">Stub Controls on/off</button>
+		<button id="toggleDelBtn" class="stub">Del Button on/off</button>
+		<button id="selectCtrl" class="stub">Select item[0]</button>
 	</div>
 <!-- END stub controll functions -->
 
@@ -26,24 +26,15 @@
 
 			<div id="itemBox" class="facs-box">
 				<!-- dynamically place added item elements here -->
-				<div class="facs-item facs-item-selected">Item #1</div>
-				<div class="facs-item">Item #2</div>
-				<div class="facs-item">Item #3</div>
-				<div class="facs-item">Item #4</div>
-				<div class="facs-item">Item #5</div>
-				<div class="facs-item">Item #6</div>
-				<div class="facs-item">Item #7</div>
-				<div class="facs-item">Item #8</div>
-				<div class="facs-item">Item #9</div>
-				<div class="facs-item">Item #10</div>
-				<div class="facs-item">Item #11</div>
-				<div class="facs-item">Item #12</div>
-				<div class="facs-item">Item #13</div>
-				<div class="facs-item">Item #14</div>
+<!-- 			<div class="stub facs-item">Item #1</div>    // facs-item-selected
+				<div class="stub facs-item">Item #2</div>
+				<div class="stub facs-item">Item #3</div>
+				<div class="stub facs-item">Item #4</div>
+				<div class="stub facs-item">Item #5</div> -->
 			</div>
 
 			<button id="addBtn">ADD Item</button>
-			<button id="deleteBtn" class="facs-button-active">Delete Item</button>
+			<button id="deleteBtn" class="facs-button-disabled">Delete Item</button>
 
 		</div>
 
